--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="bottom_nav_menu_item_rewards">Rewards</string>
     <string name="bottom_nav_menu_item_settings">Settings</string>
 
-    <string name="error_generic">Whoops! Something went wrong. Please try again.</string>
+    <string name="error_generic">Error!</string>
     <string name="error_create_wallet">Failed to create wallet.</string>
     <string name="error_import_wallet">Failed to import wallet.</string>
     <string name="error_load_wallet">Failed to load wallet.</string>
