--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="error_load_wallet">Failed to load wallet.</string>
     <string name="error_wallet_does_not_exist">Wallet does not exist!</string>
     <string name="error_fetch_eth_balance">Failed to fetch Ethereum balance</string>
+    <string name="error_fetch_nbg_balance">Failed to fetch NBG balance</string>
     <string name="error_transfer_eth">Failed to transfer Ethereum</string>
     <string name="error_sign_out">Failed to sign out</string>
 
