--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="error_wallet_does_not_exist">Wallet does not exist!</string>
     <string name="error_fetch_eth_balance">Failed to fetch Ethereum balance</string>
     <string name="error_fetch_nbg_balance">Failed to fetch NBG balance</string>
+    <string name="error_fetch_nbg_symbol">Failed to fetch NBG symbol</string>
     <string name="error_transfer_eth">Failed to transfer Ethereum</string>
     <string name="error_sign_out">Failed to sign out</string>
 
@@ -25,4 +26,6 @@
     <string name="target_wallet_address">Target Wallet Address</string>
     <string name="amount_in_ethereum">Amount in Ethereum</string>
     <string name="transferred_successfully">Transferred Successfully</string>
+    <string name="address">Address</string>
+    <string name="assets">Assets</string>
 </resources>
